# Web3bridge-AI-Agent

./: .env.example  AI_Agent.ipynb  Day1_injest.ipynb  README.md  app.py  pyproject.toml  requirements.txt  test_agent.py  test_hybrid.py  test_logs.py
.ipynb_checkpoints/: AI_Agent-checkpoint.ipynb
app/: ingest.py  main.py  search_agent.py  search_tools.py
logs/: web3bridge_agent_20251016_132520_c4ad07.json  web3bridge_agent_20251016_132749_44cf28.json  web3bridge_agent_20251016_132829_98680e.json  web3bridge_agent_20251016_132914_963829.json  web3bridge_agent_20251016_192357_f91184.json  web3bridge_agent_20251017_131254_897070.json  web3bridge_agent_20251020_234544_70af66.json  web3bridge_agent_20251021_005650_f29063.json  web3bridge_agent_20251021_102823_2b736f.json  web3bridge_agent_20251021_102910_d490bb.json  web3bridge_agent_20251021_110116_ad2087.json  web3bridge_agent_20251021_110519_5c9ca2.json  web3bridge_agent_20251021_110845_a24c49.json  web3bridge_agent_20251021_111456_29c166.json  web3bridge_agent_20251022_144156_177057.json  web3bridge_agent_20251022_144211_af53d7.json  web3bridge_agent_20251022_160919_81758f.json  web3bridge_agent_20251022_162646_4cd5fa.json  web3bridge_agent_20251022_162727_232388.json  web3bridge_agent_20251022_170316_33eac4.json  web3bridge_agent_20251022_170333_a69eb1.json  web3bridge_agent_20251022_170401_2085c9.json  web3bridge_agent_20251022_170436_8d652a.json  web3bridge_agent_v2_20251016_192512_552dec.json  web3bridge_agent_v2_20251016_193911_f774ee.json  web3bridge_agent_v2_20251016_193940_f49656.json  (+113 more)
