[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "frontmatter>=3.0.8",
    "matplotlib>=3.10.7",
    "minsearch>=0.0.5",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "pydantic-ai>=0.0.51",
    "python-frontmatter>=1.1.0",
    "requests>=2.32.5",
    "sentence-transformers>=5.1.1",
    "streamlit>=1.50.0",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]
